packages/yew-router-macro/tests/routable_derive/duplicate-route-fail.stderr
error: route `/foo` conflicts with already-registered route `/foo`
 --> tests/routable_derive/duplicate-route-fail.rs:5:10
  |
5 |     #[at("/foo")]
  |          ^^^^^^
